--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.5",
+    "cypress": "^1.4.1",
     "ember-ajax": "^3.0.0",
     "ember-cli": "~2.18.0",
     "ember-cli-app-version": "^3.0.0",
