--- a/package.json
+++ b/package.json
@@ -40,15 +40,12 @@
     "ember-source": "~2.18.0",
     "ember-welcome-page": "^3.0.0",
     "eslint-plugin-ember": "^5.0.0",
-    "loader.js": "^4.2.3",
-    "model": "^6.0.1",
-    "quote": "^0.4.0"
+    "loader.js": "^4.2.3"
   },
   "engines": {
     "node": "^4.5 || 6.* || >= 7.*"
   },
   "dependencies": {
-    "pg": "^7.4.1",
-    "yarn": "^1.3.2"
+    "pg": "^7.4.1"
   }
 }
